improve quick-fixed styling for type/visibility indicators on /content

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1120,6 +1120,7 @@ button>.loading {
 */
 
 .project ~ .project--status {
+  color: var(--color-me);
   display: grid;
   grid-auto-flow: column;
   grid-gap: var(--margin);
